@@ -1,6 +1,6 @@
 package org.assimbly.gateway.web.rest.util;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -9,7 +9,7 @@ import org.springframework.http.HttpHeaders;
 import java.util.ArrayList;
 import java.util.List;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Tests based on parsing algorithm in app/components/util/pagination-util.service.js
@@ -27,7 +27,7 @@ public class PaginationUtilUnitTest {
         List<String> strHeaders = headers.get(HttpHeaders.LINK);
         assertNotNull(strHeaders);
         assertTrue(strHeaders.size() == 1);
-        String headerData = strHeaders.get(0);
+        String headerData = strHeaders.getFirst();
         assertTrue(headerData.split(",").length == 4);
         String expectedData = "</api/_search/example?page=7&size=50>; rel=\"next\","
                 + "</api/_search/example?page=5&size=50>; rel=\"prev\","
@@ -36,7 +36,7 @@ public class PaginationUtilUnitTest {
         assertEquals(expectedData, headerData);
         List<String> xTotalCountHeaders = headers.get("X-Total-Count");
         assertTrue(xTotalCountHeaders.size() == 1);
-        assertTrue(Long.valueOf(xTotalCountHeaders.get(0)).equals(400L));
+        assertTrue(Long.valueOf(xTotalCountHeaders.getFirst()).equals(400L));
     }
 
 }
